@@ -22,17 +22,13 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 65)
-(Parent-Version lpmud 3-3 64)
-(Version-Log "Identifiers can use the ISO-8859-1 alpha characters.
-Corrected column formatting error in sprintf().
-Corrected a bug in the parsing of callback arguments.
-Implemented the use of symbols in inline closures.
-Added configuration of the wizlist file.
-Corrected a fatal bug in the call_out garbage collection.")
+(Project-Version lpmud 3-3 66)
+(Parent-Version lpmud 3-3 65)
+(Version-Log "Corrected the evaluation of the --with-wizlist-file config option.
+Removed the second scan through the command line arguments.")
 (New-Version-Log
 "")
-(Checkin-Time "Wed, 27 Jun 2001 23:02:35 -0600")
+(Checkin-Time "Thu, 28 Jun 2001 23:18:17 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -65,20 +61,20 @@ Corrected a fatal bug in the call_out garbage collection.")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.3 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.18 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.128 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.183 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.129 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.184 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.10 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
   ;; Configuration
-  (src/configure (lpmud/d/0_configure 1.19.1.27 755))
+  (src/configure (lpmud/d/0_configure 1.19.1.28 755))
   (src/config.h.in (lpmud/d/1_config.h 1.41.1.4.1.8 644))
   (src/machine.h.in (lpmud/b/9_machine.h. 1.9.1.3 644))
   (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.28 644))
   (src/mkinstalldirs (lpmud/C/4_mkinstalld 1.1 644))
   (src/install-sh (lpmud/C/5_install-sh 1.2 755))
 
-  (src/autoconf/configure.in (lpmud/d/7_configure. 1.20.1.9.1.15 644))
+  (src/autoconf/configure.in (lpmud/d/7_configure. 1.20.1.9.1.16 644))
   (src/autoconf/acconfig.h (lpmud/d/10_acconfig.h 1.6.1.3 644))
 
   (src/settings/README (lpmud/C/22_README 1.14.1.3 644))
@@ -149,7 +145,7 @@ Corrected a fatal bug in the call_out garbage collection.")
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.8 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.45 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.5 644))
-  (src/main.c (lpmud/b/8_main.c 1.60.1.33 644))
+  (src/main.c (lpmud/b/8_main.c 1.60.1.34 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.7 644))
   (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.24 644))
   (src/md5.h (lpmud/L/18_md5.h 1.1 644))
