@@ -205,8 +205,11 @@ else
   enable_use_mysql="yes"
 fi
 
-if test "x$with_wizlist_file" != "x"; then
+if test "x$with_wizlist_file" != "xno"; then
   cdef_wizlist_file="#define"
+  if test "x$with_wizlist_file" = "xyes"; then
+    with_wizlist_file=""
+  fi
 else
   cdef_wizlist_file="#undef"
 fi
@@ -288,6 +291,10 @@ fi
 
 if test "x$cdef_rxcache_table" = "x#undef"; then
   val_rxcache_table=
+fi
+
+if test "x$cdef_wizlist_file" = "x#undef"; then
+  val_wizlist_file=
 fi
 
 
