@@ -159,8 +159,8 @@ For a detailed list of all changes see the file CHANGELOG.
        + New LPC defines __VERSION_MAJOR__, __VERSION_MINOR__,
          __VERSION_MICRO__, __VERSION_PATCH__ expand to the various parts
          of the driver version.
-       + New LPC defines specifies from where the driver read the initial
-           wizlist information.
+       + New LPC define __WIZLIST__ specifies from where the driver read the
+           initial wizlist information.
        + Numbers can also be specified as binary patterns with the '0b'
            prefix, and as octals with the '0o' prefix.
        + Floating point numbers can now also be specified in the
